[package]
name = "movegrabslintec"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec", "time"] }
futures = "0.3.31"

axum = { version = "0.8.7", features = ["ws", "json", "macros"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.7", features = [
  "add-extension",
  "timeout",
  "trace",
] }
hyper = "1.8.1"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "local-time",
] }
tracing-error = "0.2.1"
tracing-appender = "0.2.3"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_derive = "1.0.228"

reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "stream",
  "multipart",
  "default-tls",
] }

surrealdb = { version = "2.4.0", features = ["kv-surrealkv", "kv-mem"] }

dotenv = "0.15.0"
rand = "0.9.2"
base64 = "0.22.1"
ring = "0.17.14"
unidecode = "0.3.0"
uuid = { version = "1.18", features = ["v7"] }
regex = "*"
governor = "*"
lazy_static = "1.5.0"

chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "*"
once_cell = "1.21.3"
parking_lot = "0.12"
directories = "6.0.0"

[profile.dev]
debug = true
opt-level = 0
# rustflags = ["-C", "prefer-dynamic"]

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "unwind"
